--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <h2>Destaque</h2>
                         <div class="caixa-conteudo">
                             <h3 class="destaque">Nova Legislação</h3>
-                            <img class="imagem-principal" src="imagens/taxi.jpg" width="100%">
+                            <img class="imagem-principal" src="taxi.jpg" width="100%">
                             <p>
                                 Lorem ipsum dolor sit amet,
                                 consectetur adipiscing elit.
@@ -52,28 +52,28 @@
                             <ul id="lista-noticias">
                                 <li>
                                     <a href="">
-                                        <img src="imagens/tecnologia.jpg" width="80">
+                                        <img src="tecnologia.jpg" width="80">
                                         <h3>Novas tecnologias!</h3>
                                         <p>Lorem ipsum dolor sit amet. consectetur...</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="">
-                                        <img src="imagens/tecnologia.jpg" width="80">
+                                        <img src="tecnologia.jpg" width="80">
                                         <h3>Novas tecnologias!</h3>
                                         <p>Lorem ipsum dolor sit amet. consectetur...</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="">
-                                        <img src="imagens/tecnologia.jpg" width="80">
+                                        <img src="tecnologia.jpg" width="80">
                                         <h3>Novas tecnologias!</h3>
                                         <p>Lorem ipsum dolor sit amet. consectetur...</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="">
-                                        <img src="imagens/tecnologia.jpg" width="80">
+                                        <img src="tecnologia.jpg" width="80">
                                         <h3>Novas tecnologias!</h3>
                                         <p>Lorem ipsum dolor sit amet. consectetur...</p>
                                     </a>
@@ -93,7 +93,7 @@
                         <h2>Ultima entrevista</h2>
                         <div class="caixa-conteudo">
                             <h3 class="destaque">Entrevista com felipe silva</h3>
-                            <img class="imagem-principal" src="imagens/doutor.jpg" width="100%">
+                            <img class="imagem-principal" src="doutor.jpg" width="100%">
                             <p>
                                 Lorem ipsum dolor sit amet,
                                 consectetur adipiscing elit.
